fix: address overflow of Observable notebooks rendered as blog posts

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -13,22 +13,22 @@
   .hit-count {
     font: 1.6rem theme('fontFamily.mono');
   }
+}
 
-  /* Observable overrides. */
-  .observablehq {
-    @apply font-serif text-3xl;
-  }
+/* Observable overrides. */
+.observablehq {
+  @apply text-3xl;
+}
 
-  .observablehq > button {
-    @apply font-mono text-xl text-primary rounded-md border-solid border-2 border-primary px-4 py-2;
-  }
+.observablehq > button {
+  @apply font-mono text-xl text-primary rounded-md border-solid border-2 border-primary px-4 py-2;
+}
 
-  .observablehq > svg {
-    @apply h-full w-full;
-  }
+.observablehq > svg {
+  @apply h-full w-full;
+}
 
-  /* KaTeX overrides. */
-  .math {
-    @apply text-3xl;
-  }
+/* KaTeX overrides. */
+.math {
+  @apply text-3xl;
 }
